cmake_minimum_required(VERSION 3.26)
project(Minigin)

if(EMSCRIPTEN)
  message("Using Emscripten!")
  set(ENGINE_NAME minigin_web)
  set(APP_NAME qbert_web)
  set(APP_PARAM)
else()
  set(ENGINE_NAME minigin)
  set(APP_NAME qbert)
  set(APP_PARAM WIN32)
endif()


#=======================DEPENDENCIES======================
include(FetchContent)

find_package(nlohmann_json 3.12.0 CONFIG QUIET)
if(NOT nlohmann_json_FOUND)
    FetchContent_Declare(
        nlohmann_json
        URL https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz
        GIT_SHALLOW TRUE
        )
    FetchContent_MakeAvailable(nlohmann_json)
endif()


FetchContent_Declare(
    imgui_plot
    GIT_REPOSITORY https://github.com/soulthreads/imgui-plot.git
    GIT_TAG master
    EXCLUDE_FROM_ALL
)
FetchContent_MakeAvailable(imgui_plot)

# Dear ImGui
FetchContent_Declare(
  imgui
  GIT_REPOSITORY https://github.com/ocornut/imgui
  GIT_TAG v1.92.5-docking
  GIT_SHALLOW TRUE
)
FetchContent_MakeAvailable(imgui)

add_library(imgui STATIC
  ${imgui_SOURCE_DIR}/imgui.cpp
  ${imgui_SOURCE_DIR}/imgui_draw.cpp
  ${imgui_SOURCE_DIR}/imgui_tables.cpp
  ${imgui_SOURCE_DIR}/imgui_widgets.cpp
  ${imgui_SOURCE_DIR}/imgui_demo.cpp
  ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl3.cpp
  ${imgui_SOURCE_DIR}/backends/imgui_impl_sdlrenderer3.cpp
)
target_include_directories(imgui PUBLIC ${imgui_SOURCE_DIR} ${sdl3_SOURCE_DIR}/include)
target_link_libraries(imgui PUBLIC SDL3::SDL3)
target_compile_features(imgui PUBLIC cxx_std_20)

target_link_libraries(imgui_plot PUBLIC imgui)
target_include_directories(imgui_plot PUBLIC ${imgui_SOURCE_DIR})
target_compile_definitions(imgui_plot PUBLIC IMGUI_DEFINE_MATH_OPERATORS)



# add glm
find_package(glm CONFIG QUIET)
if(NOT glm_FOUND)
  FetchContent_Declare(
    glm
    URL https://github.com/g-truc/glm/releases/download/1.0.3/glm-1.0.3.zip
    DOWNLOAD_NO_PROGRESS ON
    DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/downloads
  )
  FetchContent_MakeAvailable(glm)
endif()

# Add SDL3
find_package(SDL3 3.4 CONFIG QUIET)
if(NOT SDL3_FOUND)
  if (WIN32)
    FetchContent_Declare(
      SDL3
      URL https://www.libsdl.org/release/SDL3-devel-3.4.0-VC.zip
      DOWNLOAD_NO_PROGRESS ON
      DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/downloads
    )
    FetchContent_MakeAvailable(SDL3)
    list(PREPEND CMAKE_PREFIX_PATH "${sdl3_SOURCE_DIR}")
    find_package(SDL3 CONFIG REQUIRED)
  else()
    FetchContent_Declare(
      SDL3
      GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
      GIT_TAG release-3.4.0
      GIT_SHALLOW TRUE
      GIT_PROGRESS TRUE
    )
    FetchContent_MakeAvailable(SDL3)
  endif()
endif()



# Add SDL3_mixer
find_package(SDL3_mixer 3.2.2 CONFIG QUIET)
if(NOT SDL3_mixer_FOUND)
  if (WIN32)
    FetchContent_Declare(
      SDL3_mixer
      URL https://github.com/libsdl-org/SDL_mixer/releases/download/release-3.2.0/SDL3_mixer-devel-3.2.0-VC.zip
      DOWNLOAD_NO_PROGRESS ON
      DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/downloads
    )
    FetchContent_MakeAvailable(SDL3_mixer)
    list(PREPEND CMAKE_PREFIX_PATH "${sdl3_mixer_SOURCE_DIR}")
    find_package(SDL3_mixer CONFIG REQUIRED)
  else()
    FetchContent_Declare(
      SDL3_mixer
      GIT_REPOSITORY https://github.com/libsdl-org/SDL_mixer.git
      GIT_TAG release-3.2.0
      GIT_SHALLOW TRUE
      GIT_PROGRESS TRUE
    )
   
    FetchContent_MakeAvailable(SDL3_mixer)
  endif()
endif()


# Add SDL3_ttf
find_package(SDL3_ttf 3.2.2 CONFIG QUIET)
if(NOT SDL3_ttf_FOUND)
  if (WIN32)
    FetchContent_Declare(
      SDL3_ttf
      URL https://www.libsdl.org/projects/SDL_ttf/release/SDL3_ttf-devel-3.2.2-VC.zip
      DOWNLOAD_NO_PROGRESS ON
      DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/downloads
    )
    FetchContent_MakeAvailable(SDL3_ttf)
    list(PREPEND CMAKE_PREFIX_PATH "${sdl3_ttf_SOURCE_DIR}")
    find_package(SDL3_ttf CONFIG REQUIRED)
  else()
    FetchContent_Declare(
      SDL3_ttf
      GIT_REPOSITORY https://github.com/libsdl-org/SDL_ttf.git
      GIT_TAG release-3.2.2
      GIT_SHALLOW TRUE
      GIT_PROGRESS TRUE
    )
    set(SDL3TTF_INSTALL OFF)
    if(EMSCRIPTEN)
      list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/emscripten")
      set(SDL3TTF_USE_SYSTEM_FREETYPE ON)
      set(SDL3TTF_VENDORED OFF)
      set(SDLTTF_PLUTOSVG OFF)
      add_compile_options(-sUSE_FREETYPE=1 -sUSE_HARFBUZZ=1)
      add_link_options(-sUSE_FREETYPE=1 -sUSE_HARFBUZZ=1)
    endif()
    FetchContent_MakeAvailable(SDL3_ttf)
  endif()
endif()





if (WIN32)
  # Add VLD (Visual Leak Detector) for memory leak detection on Windows
  find_package(VLD CONFIG)
endif()
#========================DEPENDENCIES====================





#_____________________ENGINE_____________________________
add_library(${ENGINE_NAME} STATIC  
  Minigin/GameObject.cpp
 
  Minigin/Minigin.cpp
  Minigin/Renderer.cpp
  
  "Minigin/ResourceSystem/ResourceManager.cpp"
  "Minigin/ResourceSystem/Texture2D.cpp"
  "Minigin/ResourceSystem/Font.cpp"
  
  "Minigin/SceneSystem/Scene.cpp"
  "Minigin/SceneSystem/SceneManager.cpp"

  "Minigin/Components/TransformComponent.cpp"
  "Minigin/Components/ObjectComponent.cpp"
  "Minigin/Components/BenchMarkComponent.cpp"
  "Minigin/Components/FPSComponent.cpp"
  "Minigin/Components/RenderComponent.cpp"
  "Minigin/Components/RotationComponent.cpp"
  "Minigin/Components/TextComponent.cpp"
  "Minigin/Components/AnimationComponent.cpp"

  "Minigin/EventSystem/Subject.cpp" 
  "Minigin/EventSystem/EventQueue.cpp"
  
  "Minigin/InputSystem/InputManager.cpp"
  "Minigin/InputSystem/Gamepad/XBoxControllerImpl.cpp"
  "Minigin/InputSystem/Gamepad/SDLControllerImpl.cpp"
  "Minigin/InputSystem/Gamepad/Gamepad.cpp"
  "Minigin/InputSystem/Keyboard/Keyboard.cpp"
  "Minigin/InputSystem/Mouse/Mouse.cpp"    
  
  "Minigin/SoundSystem/SDLSoundSystem.cpp"
  "Minigin/SoundSystem/SDLLoggingSoundSystem.cpp"
  
  "Minigin/LoggingSystem/Logger.cpp"
  "Minigin/LoggingSystem/FileSink.cpp"
  "Minigin/LoggingSystem/UISink.cpp")


target_include_directories("${ENGINE_NAME}" PUBLIC
  ${CMAKE_SOURCE_DIR}/Minigin/
  ${VLD_INCLUDE_DIR}
)
target_link_libraries("${ENGINE_NAME}" PUBLIC
  SDL3::SDL3
  SDL3_ttf::SDL3_ttf
  SDL3_mixer::SDL3_mixer
  glm::glm
  imgui
  imgui_plot 
  nlohmann_json::nlohmann_json
  ${VLD_LIBRARIES}
)
#________________________________________________________




#_______________________EXECUTABLE_______________________
add_executable(${APP_NAME} ${APP_PARAM}
    "QBert/Main.cpp"
    "QBert/GridComponent.cpp"
    "QBert/Player/PlayerControllerComponent.cpp"
    "QBert/Player/PlayerStateComponent.cpp"
     
    "QBert/Player/PlayerState.cpp"
    "QBert/GridMovementComponent.cpp"
    "QBert/Menu/MenuStateComponent.cpp" 
    "QBert/Levels/Level01.cpp" 
    "QBert/Levels/LevelManager.cpp"
    "QBert/GridInteractionComponent.cpp" 
    "QBert/Blocks/BlockStateComopnent.cpp" 
    "QBert/Blocks/BlockState.cpp")
target_link_libraries(${APP_NAME} PRIVATE ${ENGINE_NAME})
#________________________________________________________



#______________________COMPILER SETTINGS____________________
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

  target_compile_features(${APP_NAME} PUBLIC cxx_std_20)
  target_compile_features(${ENGINE_NAME} PUBLIC cxx_std_20)
if(MSVC)
  # compile at warning level 4 + treat warnings as errors
  target_compile_options(${APP_NAME} PRIVATE /W4 /WX)
  target_compile_options(${ENGINE_NAME} PRIVATE /W4 /WX)
else()
  target_compile_options(${APP_NAME} PRIVATE -Wall -Wextra -Werror)
  target_compile_options(${ENGINE_NAME} PRIVATE -Wall -Wextra -Werror)

endif()
#________________________________________________________






#_____________________PLATFORM SETTINGS____________________

if(EMSCRIPTEN)
  set(EMSCRIPTEN_COMPILE_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -g")
  set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -sUSE_FREETYPE=1 -sUSE_HARFBUZZ=1 -g -sALLOW_MEMORY_GROWTH -s AUDIO_WORKLETS=1 --preload-file \"${CMAKE_SOURCE_DIR}/Data@/\"")

  # Use the Emscripten toolchain
  set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/EmscriptenToolchain.cmake)

  # Additional settings for Emscripten build
  set_target_properties(${APP_NAME} PROPERTIES
      COMPILE_FLAGS "${EMSCRIPTEN_COMPILE_FLAGS}"
      LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS}"
  )

  add_custom_command(TARGET ${APP_NAME} POST_BUILD
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/web" "$<TARGET_FILE_DIR:${APP_NAME}>/"
  )

  # Have emscripten generate a html page too.
  set(CMAKE_EXECUTABLE_SUFFIX ".html")

elseif(WIN32)
  # Set minigin as the default startup project
  set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${APP_NAME})
  # Set working directory to output folder
  set_target_properties(${APP_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:${APP_NAME}>")

  # Copy SDL dlls to output folder
  set(SDL_RUNTIME_DLLS
    SDL3::SDL3
    SDL3_ttf::SDL3_ttf
    SDL3_mixer::SDL3_mixer-shared
  )

  foreach(dllTarget IN LISTS SDL_RUNTIME_DLLS)
    add_custom_command(
      TARGET ${APP_NAME} POST_BUILD
      COMMAND ${CMAKE_COMMAND} -E copy_if_different
          "$<TARGET_FILE:${dllTarget}>"
          "$<TARGET_FILE_DIR:${APP_NAME}>"
      VERBATIM
    )
  endforeach()

  add_custom_command(TARGET ${APP_NAME} POST_BUILD
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Data" "$<TARGET_FILE_DIR:${APP_NAME}>/Data"
  )
elseif(APPLE)
  set_target_properties(${APP_NAME} PROPERTIES
    MACOSX_BUNDLE TRUE
    INSTALL_RPATH "@executable_path/../Frameworks"
    BUILD_WITH_INSTALL_RPATH TRUE
  )
  add_custom_command(TARGET ${APP_NAME} POST_BUILD
    COMMAND "${CMAKE_COMMAND}" -E make_directory "$<TARGET_BUNDLE_DIR:${APP_NAME}>/Contents/Frameworks"

    COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:SDL3::SDL3-shared>" "$<TARGET_BUNDLE_DIR:${APP_NAME}>/Contents/Frameworks/"
    COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:SDL3_ttf::SDL3_ttf-shared>" "$<TARGET_BUNDLE_DIR:${APP_NAME}>/Contents/Frameworks/"
    COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:SDL3_mixer::SDL3_mixer-shared>" "$<TARGET_BUNDLE_DIR:${APP_NAME}>/Contents/Frameworks/"
    COMMAND install_name_tool -change "@rpath/libSDL3_ttf.0.dylib" "@executable_path/../Frameworks/libSDL3_ttf.0.2.2.dylib" "$<TARGET_FILE:${APP_NAME}>"
    COMMAND install_name_tool -change "@rpath/libSDL3_mixer.0.dylib" "@executable_path/../Frameworks/libSDL3_mixer.0.dylib" "$<TARGET_FILE:${APP_NAME}>"
    COMMAND install_name_tool -change "@rpath/libSDL3.0.dylib" "@executable_path/../Frameworks/libSDL3.0.dylib" "$<TARGET_FILE:${APP_NAME}>"
  )

  # Copy Data folder to output directory after build
  add_custom_command(TARGET ${APP_NAME} POST_BUILD
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Data" "$<TARGET_FILE_DIR:${APP_NAME}>/Data"
  )
else()
  # Copy Data folder to output directory after build
  add_custom_command(TARGET ${APP_NAME} POST_BUILD
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Data" "$<TARGET_FILE_DIR:${APP_NAME}>/Data"
  )
endif()